step15.4-move-mysql-endpoint-out-of-dockerfile/infra/16-k8s-service-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME-service
  namespace: NAME_SPACE
  labels:
    app: APP_NAME-app
spec:
  type: ClusterIP
  selector:
    component: APP_NAME
    app: APP_NAME-app
  ports:
    - port: 8080
      targetPort: TARGET_PORT
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APP_NAME-service
  namespace: NAME_SPACE
  labels:
    app: APP_NAME-app
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      component: APP_NAME
      app: APP_NAME-app
  template:
    metadata:
      labels:
        component: APP_NAME
        app: APP_NAME-app
    spec:
#      serviceAccountName: APP_NAME-iam-service-account
      containers:
        - name: APP_NAME
          image: 291148202449.dkr.ecr.ap-southeast-2.amazonaws.com/APP_NAME:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "768Mi"
              cpu: "1"
          ports:
            - containerPort: 8080
