step15.4-move-mysql-endpoint-out-of-dockerfile/infra/06-k8s-petclinic-ingress-service.yaml
# This will create EC2 - Load Balancer
#     with Listener on HTTP:80
#     map /* from NAM_SPACE to app-service:8080
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress-service
  namespace: NAME_SPACE
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: HOST_NAME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8080
